# buddy_schedule

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: lint.yml  test.yml
migrations/: 0001_init.sql
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  repo.rs
web/: index.html
web-frontend/: Cargo.toml  build.sh
web-frontend/src/: lib.rs
web/pkg/: .gitkeep
web/static/: app.js  style.css
